# frappe_bike_rental

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.cfg.bak  setup.py
bike_rental/: _check_waba.py  _find_waba.py  audit.py  hooks.py  modules.txt  patches.txt
bike_rental.egg-info/: PKG-INFO  SOURCES.txt
bike_rental/api/: auth.py  booking.py  cancel_booking.py  catalogue.py  check_in.py  check_out.py  customer_permissions.py  customer_profile.py  early_return.py  payments.py  pricing.py  register.py
bike_rental/auth/: __init__.py
bike_rental/fixtures/: bike_model.json  hub.json  role.json
bike_rental/notification/: business_hours.py  queue.py
bike_rental/page/booking_management/: booking_management.js  booking_management.json  booking_management.py
bike_rental/page/dashboard/: dashboard.js  dashboard.json  dashboard.py
bike_rental/page/reporting_analytics/: reporting_analytics.js  reporting_analytics.json  reporting_analytics.py
bike_rental/pricing/: calculate.py
bike_rental/scheduler/: __init__.py  checkout_reminders.py  expire_kyc_documents.py  km_maintenance_alerts.py
bike_rental/tests/: __init__.py  test_account_pages.py  test_bike_detail.py  test_bike_swap.py  test_booking_management.py  test_catalogue.py  test_customer_profile.py  test_dashboard.py  test_kyc_booking_integration.py  test_kyc_verification.py  test_maintenance.py  test_notification_queue.py  test_payments.py  test_prolonged_maintenance.py  test_reporting_analytics.py
bike_rental/workspace/: bike-rental.json
bike_rental/www/: index.html  index.py
(+56 files in other folders)
